# minicraft-clone

./: CMakeLists.txt  README.md  main.c
entities/player/: player.c  player.h
enviroment/terrain/: terrainGeneration.h
utils/: constants.h  types.h
